--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,6 @@ dependencies {
     // open Source
     //noinspection GradleCompatible,GradleCompatible
     implementation 'com.android.support:appcompat-v7:23.2.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
 
 }
