--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,5 +49,7 @@ dependencies {
     //noinspection GradleCompatible,GradleCompatible
     implementation 'com.android.support:appcompat-v7:23.2.0'
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'jp.wasabeef:richeditor-android:2.0.0'
+
 
 }
