1.MainActivity 로드 기능 구체화 2.EditActivity(수정가능) 구현 3.수정하고 나면, 수정한 내용이 최신 리스트로 들어가서 의도치 않은 최근 문서가 등록되는데 이것을 생각할 필요가 잇음.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,11 @@
         <activity
             android:name=".WriteActivity"
             android:exported="false" />
+
+        <activity
+            android:name=".EditActivity"
+            android:exported="false" />
+
         <activity
             android:name=".PINActivity"
             android:exported="false" />
