--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.puresoftware.quickmemo">
 
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -62,6 +63,9 @@
             </intent-filter>
 
         </activity>
+
+        <service android:name=".floating.WidgetService"
+            android:enabled="true"/>
     </application>
 
 </manifest>
