--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
         android:theme="@style/Theme.QuickMemo">
         <activity
             android:name=".sample.SampleAcivity"
-            android:exported="true"></activity>
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".RichTextEditorActivity"
             android:exported="true" />
@@ -31,8 +33,7 @@
             android:exported="false" />
         <activity
             android:name=".PINActivity"
-            android:exported="false"
-            />
+            android:exported="false" />
 
         <activity
             android:name=".ResetPasswordActivity"
