--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,6 +36,11 @@
             android:exported="false" />
 
         <activity
+            android:name=".PINsetActivity"
+            android:exported="true"></activity>
+
+
+        <activity
             android:name=".ResetPasswordActivity"
             android:exported="false" />
         <activity
@@ -60,7 +65,6 @@
             android:exported="true" />
         <activity
             android:name=".MainActivity"
-
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
