--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,10 +15,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.QuickMemo">
         <activity
+            android:name=".SelectFolderActivity"
+            android:exported="false" />
+        <activity
             android:name=".sample.SampleAcivity"
-            android:exported="true">
-
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".RichTextEditorActivity"
             android:exported="true" />
@@ -34,12 +35,9 @@
         <activity
             android:name=".PINActivity"
             android:exported="false" />
-
         <activity
             android:name=".PINsetActivity"
-            android:exported="true"></activity>
-
-
+            android:exported="true" />
         <activity
             android:name=".ResetPasswordActivity"
             android:exported="false" />
